# Legacy64

./: .gitignore  .legacyai.yml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app-packs/linux/: desktop.yml
app-packs/macos/: desktop.yml
app-packs/windows/: desktop.yml
docs/: app-packs.md  y2038.md
docs/encryption/: README.md  _source_record_template.md  matrix.md  overview.md
docs/encryption/distros/: debian.md  fedora.md  linux-mint.md  manjaro.md  rhel.md  tails.md  ubuntu.md  unknown-coral-linux.md  zorin-os.md
docs/encryption/kernels/: darwin-xnu.md  linux-kernel.md  windows-kernel.md
legacyai/: __init__.py  __main__.py  bind.py  cli.py  patch.py  patchset.py  quarantine.py  store.py  verify.py
legacyai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
legacyai/app_pack/: __init__.py  commands.py  generator.py  loader.py
legacyai/scanner/: __init__.py  engine.py  qa.py  qc.py
schemas/: app_pack.schema.json  artifact.schema.json  binding.schema.json  patch.schema.json  patchset.schema.json  source-patch-binding.schema.json
scripts/: add-complementary-64bit-backends.sh
tests/: test_cli.py  test_engine.py  test_generator.py  test_legacyai.py  test_loader.py  test_qa.py  test_qc.py  test_store.py
tests/fixtures/: safe_text.txt  secrets_script.sh
tooling/legacyai/: pyproject.toml
tooling/legacyai/legacyai/: __init__.py  __main__.py  cli.py  repo.py  store.py  validate.py
tooling/legacyai/legacyai/commands/: __init__.py  add.py  bind.py  init.py  verify.py
tooling/legacyai/tests/: __init__.py  test_commands.py
